Rerouting Font files

--- a/sass/core/atoms/_typography.scss
+++ b/sass/core/atoms/_typography.scss
@@ -4,20 +4,20 @@
 @import url("//hello.myfonts.net/count/2ca9ea");
 @font-face {
 	font-family: 'ProximaNovaA-Thin';
-	src: url('../assets/fonts/ProximaNovaA-Thin.eot');
-	src: url('../assets/fonts/ProximaNovaA-Thin.eot?#iefix') format('embedded-opentype'),
-		url('../assets/fonts/ProximaNovaA-Thin.woff2') format('woff2'),
-		url('../assets/fonts/ProximaNovaA-Thin.woff') format('woff'),
-		url('../assets/fonts/ProximaNovaA-Thin.ttf') format('truetype');
+	src: url('fonts/ProximaNovaA-Thin.eot');
+	src: url('fonts/ProximaNovaA-Thin.eot?#iefix') format('embedded-opentype'),
+		url('fonts/ProximaNovaA-Thin.woff2') format('woff2'),
+		url('fonts/ProximaNovaA-Thin.woff') format('woff'),
+		url('fonts/ProximaNovaA-Thin.ttf') format('truetype');
 	}
-@font-face {font-family: 'ProximaNovaS-Thin';src: url('../assets/fonts/ProximaNovaS-Thin.eot');src: url('../assets/fonts/ProximaNovaS-Thin.eot?#iefix') format('embedded-opentype'),url('../assets/fonts/ProximaNovaS-Thin.woff2') format('woff2'),url('../assets/fonts/ProximaNovaS-Thin.woff') format('woff'),url('../assets/fonts/ProximaNovaS-Thin.ttf') format('truetype');}
-@font-face {font-family: 'ProximaNovaS-Regular';src: url('../assets/fonts/ProximaNovaS-Regular.eot');src: url('../assets/fonts/ProximaNovaS-Regular.eot?#iefix') format('embedded-opentype'),url('../assets/fonts/ProximaNovaS-Regular.woff2') format('woff2'),url('../assets/fonts/ProximaNovaS-Regular.woff') format('woff'),url('../assets/fonts/ProximaNovaS-Regular.ttf') format('truetype');}
-@font-face {font-family: 'ProximaNovaA-Regular';src: url('../assets/fonts/ProximaNovaA-Regular.eot');src: url('../assets/fonts/ProximaNovaA-Regular.eot?#iefix') format('embedded-opentype'),url('../assets/fonts/ProximaNovaA-Regular.woff2') format('woff2'),url('../assets/fonts/ProximaNovaA-Regular.woff') format('woff'),url('../assets/fonts/ProximaNovaA-Regular.ttf') format('truetype');}
-@font-face {font-family: 'ProximaNovaT-Thin';src: url('../assets/fonts/ProximaNovaT-Thin.eot');src: url('../assets/fonts/ProximaNovaT-Thin.eot?#iefix') format('embedded-opentype'),url('../assets/fonts/ProximaNovaT-Thin.woff2') format('woff2'),url('../assets/fonts/ProximaNovaT-Thin.woff') format('woff'),url('../assets/fonts/ProximaNovaT-Thin.ttf') format('truetype');}
-@font-face {font-family: 'ProximaNova-Regular';src: url('../assets/fonts/ProximaNova-Regular.eot');src: url('../assets/fonts/ProximaNova-Regular.eot?#iefix') format('embedded-opentype'),url('../assets/fonts/ProximaNova-Regular.woff2') format('woff2'),url('../assets/fonts/ProximaNova-Regular.woff') format('woff'),url('../assets/fonts/ProximaNova-Regular.ttf') format('truetype');}
+@font-face {font-family: 'ProximaNovaS-Thin';src: url('fonts/ProximaNovaS-Thin.eot');src: url('fonts/ProximaNovaS-Thin.eot?#iefix') format('embedded-opentype'),url('fonts/ProximaNovaS-Thin.woff2') format('woff2'),url('fonts/ProximaNovaS-Thin.woff') format('woff'),url('fonts/ProximaNovaS-Thin.ttf') format('truetype');}
+@font-face {font-family: 'ProximaNovaS-Regular';src: url('fonts/ProximaNovaS-Regular.eot');src: url('fonts/ProximaNovaS-Regular.eot?#iefix') format('embedded-opentype'),url('fonts/ProximaNovaS-Regular.woff2') format('woff2'),url('fonts/ProximaNovaS-Regular.woff') format('woff'),url('fonts/ProximaNovaS-Regular.ttf') format('truetype');}
+@font-face {font-family: 'ProximaNovaA-Regular';src: url('fonts/ProximaNovaA-Regular.eot');src: url('fonts/ProximaNovaA-Regular.eot?#iefix') format('embedded-opentype'),url('fonts/ProximaNovaA-Regular.woff2') format('woff2'),url('fonts/ProximaNovaA-Regular.woff') format('woff'),url('fonts/ProximaNovaA-Regular.ttf') format('truetype');}
+@font-face {font-family: 'ProximaNovaT-Thin';src: url('fonts/ProximaNovaT-Thin.eot');src: url('fonts/ProximaNovaT-Thin.eot?#iefix') format('embedded-opentype'),url('fonts/ProximaNovaT-Thin.woff2') format('woff2'),url('fonts/ProximaNovaT-Thin.woff') format('woff'),url('fonts/ProximaNovaT-Thin.ttf') format('truetype');}
+@font-face {font-family: 'ProximaNova-Regular';src: url('fonts/ProximaNova-Regular.eot');src: url('fonts/ProximaNova-Regular.eot?#iefix') format('embedded-opentype'),url('fonts/ProximaNova-Regular.woff2') format('woff2'),url('fonts/ProximaNova-Regular.woff') format('woff'),url('fonts/ProximaNova-Regular.ttf') format('truetype');}
 @import url("//hello.myfonts.net/count/2ca9ef");
-@font-face {font-family: 'AvenirLTStd-Book';src: url('../assets/fonts/2CA9EF_0_0.eot');src: url('../assets/fonts/2CA9EF_0_0.eot?#iefix') format('embedded-opentype'),url('../assets/fonts/2CA9EF_0_0.woff2') format('woff2'),url('../assets/fonts/2CA9EF_0_0.woff') format('woff'),url('../assets/fonts/2CA9EF_0_0.ttf') format('truetype');}
-@font-face {font-family: 'AvenirLTStd-Black';src: url('../assets/fonts/2CA9EF_1_0.eot');src: url('../assets/fonts/2CA9EF_1_0.eot?#iefix') format('embedded-opentype'),url('../assets/fonts/2CA9EF_1_0.woff2') format('woff2'),url('../assets/fonts/2CA9EF_1_0.woff') format('woff'),url('../assets/fonts/2CA9EF_1_0.ttf') format('truetype');}
+@font-face {font-family: 'AvenirLTStd-Book';src: url('fonts/2CA9EF_0_0.eot');src: url('fonts/2CA9EF_0_0.eot?#iefix') format('embedded-opentype'),url('fonts/2CA9EF_0_0.woff2') format('woff2'),url('fonts/2CA9EF_0_0.woff') format('woff'),url('fonts/2CA9EF_0_0.ttf') format('truetype');}
+@font-face {font-family: 'AvenirLTStd-Black';src: url('fonts/2CA9EF_1_0.eot');src: url('fonts/2CA9EF_1_0.eot?#iefix') format('embedded-opentype'),url('fonts/2CA9EF_1_0.woff2') format('woff2'),url('fonts/2CA9EF_1_0.woff') format('woff'),url('fonts/2CA9EF_1_0.ttf') format('truetype');}
 
 p, summary {
 	margin: 0 0 .75em;
