--- a/sass/core/atoms/_icons.scss
+++ b/sass/core/atoms/_icons.scss
@@ -19,11 +19,11 @@ ul.icons li .icon-large:before,ul.icons li .icon-large:before {
 
 @font-face {
 	font-family: 'icomoon';
-	src:url('../assets/fonts/icomoon.eot');
-	src:url('../assets/fonts/icomoon.eot?#iefix') format('embedded-opentype'),
-		url('../assets/fonts/icomoon.ttf') format('truetype'),
-		url('../assets/fonts/icomoon.woff') format('woff'),
-		url('../assets/fonts/icomoon.svg#icomoon') format('svg');
+	src:url('fonts/icomoon.eot');
+	src:url('fonts/icomoon.eot?#iefix') format('embedded-opentype'),
+		url('fonts/icomoon.ttf') format('truetype'),
+		url('fonts/icomoon.woff') format('woff'),
+		url('fonts/icomoon.svg#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 	unicode-range:U+00-FFFF;
